--- a/easycontrol/app/src/main/res/layout/activity_byd.xml
+++ b/easycontrol/app/src/main/res/layout/activity_byd.xml
@@ -6,12 +6,13 @@
     android:orientation="horizontal">
 
     <LinearLayout
-        android:layout_width="60dp"
+        android:layout_width="54dp"
         android:layout_height="match_parent"
         android:gravity="center_horizontal"
         android:orientation="vertical"
         android:paddingTop="5dp"
         android:paddingBottom="15dp">
+
         <ImageView
             android:id="@+id/button_set"
             android:layout_width="54dp"
@@ -19,24 +20,18 @@
             android:padding="15dp"
             android:src="@drawable/bars"
             android:tint="@color/onBackground" />
+        <ImageView
+            android:id="@+id/button_layout"
+            android:layout_width="54dp"
+            android:layout_height="54dp"
+            android:padding="15dp"
+            android:src="@drawable/bars"
+            android:tint="@color/onBackground" />
     </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/mainClient"
-        android:layout_width="100dp"
-        android:layout_height="200dp"
-        android:background="@android:color/black"
-        android:orientation="vertical" />
-    <Button
-        android:id="@+id/add"
-        android:text="+"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-    <LinearLayout
-        android:id="@+id/moreClient"
-        android:layout_width="100dp"
-        android:layout_height="200dp"
-        android:background="@android:color/black"
-        android:orientation="vertical" />
+    <FrameLayout
+        android:id="@+id/container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </LinearLayout>
